--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,8 +41,8 @@ jobs:
           git submodule init
           git submodule update --recursive
           ./configure --prefix=${GITHUB_WORKSPACE}/lucas/
-          ninja
-          ninja install
+          make
+          make install
           cp qemu.desktop qemu_logo_no_text.svg AppRun libunionpreload.so lucas/
 
       # Runs a set of commands using the runners shell
