--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,15 @@ jobs:
 
       - name: Prerequisites
         run: |
-          sudo apt install python3-venv git ninja-build pkg-config libglib2.0-dev flex bison
+          sudo apt install python3-venv git ninja-build pkg-config libglib2.0-dev flex bison git libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev ninja-build
+          sudo apt-get install git-email
+          sudo apt-get install libaio-dev libbluetooth-dev libcapstone-dev libbrlapi-dev libbz2-dev
+          sudo apt-get install libcap-ng-dev libcurl4-gnutls-dev libgtk-3-dev
+          sudo apt-get install libibverbs-dev libjpeg8-dev libncurses5-dev libnuma-dev
+          sudo apt-get install librbd-dev librdmacm-dev
+          sudo apt-get install libsasl2-dev libsdl2-dev libseccomp-dev libsnappy-dev libssh-dev
+          sudo apt-get install libvde-dev libvdeplug-dev libvte-2.91-dev libxen-dev liblzo2-dev
+          sudo apt-get install valgrind xfslibs-dev
           wget -q "https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage" -O linuxdeploy ; chmod a+x linuxdeploy
           wget -q "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage" -O appimagetool ; chmod a+x appimagetool
           mkdir -p lucas/usr/lib/
@@ -40,7 +48,7 @@ jobs:
           cd qemu
           git submodule init
           git submodule update --recursive
-          ./configure --prefix=${GITHUB_WORKSPACE}/lucas/usr/
+          ./configure --enbale-sdl --enable-gtk --prefix=${GITHUB_WORKSPACE}/lucas/usr/
           make
           make install
           cd ..
