--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -49,7 +49,7 @@ jobs:
           cd qemu
           git submodule init
           git submodule update --recursive
-          ./configure --enable-sdl --enable-gtk --enable-opengl --enable-kvm --enable-gnutls --enable-l2tpv3 --enable-libssh --enable-libudev --enable-libusb --enable-usb-redir --enable-libudev --enable-netmap --enable-nettle --enable-vmnet --enable-vde --enable-slirp-smbd --enable-slirp --enable-af-xdp --enable-alsa --enable-pa --prefix=${GITHUB_WORKSPACE}/lucas/usr/
+          ./configure --disable-darwin-user --enable-sdl --enable-gtk --enable-opengl --enable-kvm --enable-gnutls --enable-l2tpv3 --enable-libssh --enable-libudev --enable-libusb --enable-usb-redir --enable-libudev --enable-netmap --enable-nettle --enable-vmnet --enable-vde --enable-slirp-smbd --enable-slirp --enable-af-xdp --enable-alsa --enable-pa --prefix=${GITHUB_WORKSPACE}/lucas/usr/
           make
           make install
           cd ..
