--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Prerequisites
         run: |
           sudo apt install python3-venv git ninja-build pkg-config libglib2.0-dev flex bison git libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev ninja-build
-          sudo apt-get install libaio-dev libbluetooth-dev libcapstone-dev libbrlapi-dev libbz2-dev
+          sudo apt-get install libaio-dev libbluetooth-dev libcapstone-dev libbrlapi-dev libbz2-dev libusb*
           sudo apt-get install libcap-ng-dev libcurl4-gnutls-dev libgtk-3-dev libnfs*
           sudo apt-get install libibverbs-dev libjpeg8-dev libncurses5-dev libnuma-dev
           sudo apt-get install librbd-dev librdmacm-dev
@@ -49,7 +49,7 @@ jobs:
           cd qemu
           git submodule init
           git submodule update --recursive
-          ./configure --enable-sdl --enable-gtk --enable-opengl --enable-kvm --enable-gnutls --enable-libssh --enable-libudev --enable-libusb --enable-libudev --enable-netmap --enable-nettle --enable-alsa --enable-pa --prefix=${GITHUB_WORKSPACE}/lucas/usr/
+          ./configure --enable-sdl --enable-gtk --enable-opengl --enable-kvm --enable-gnutls --enable-libssh --enable-libusb --enable-libudev --enable-netmap --enable-nettle --enable-alsa --enable-pa --prefix=${GITHUB_WORKSPACE}/lucas/usr/
           make
           make install
           cd ..
