--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,6 +41,7 @@ jobs:
           sudo apt-get install libvde-dev libvdeplug-dev libvte-2.91-dev libxen-dev liblzo2-dev
           sudo apt-get install valgrind xfslibs-dev pip python3-sphinx
           sudo pip install meson
+          sudo pip install sphinx-rtd-theme
           sudo add-apt-repository ppa:ubuntu-toolchain-r/ppa -y
           sudo apt update
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
