--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,10 @@ jobs:
 
       - name: Prerequisites
         run: |
-          sudo apt install python3-venv git ninja-build pkg-config libglib2.0-dev flex bison git libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev ninja-build
+          wget -c "https://github.com/ninja-build/ninja/releases/download/v1.11.1/ninja-linux.zip"
+          unzip ninja-*.zip
+          sudo mv ninja /usr/bin/
+          sudo apt install python3-venv git pkg-config libglib2.0-dev flex bison git libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev
           sudo apt-get install libaio-dev libbluetooth-dev libcapstone-dev libbrlapi-dev libbz2-dev libusb*
           sudo apt-get install libcap-ng-dev libcurl4-gnutls-dev libgtk-3-dev libnfs* slirp* libslirp0 libslirp-dev
           sudo apt-get install libibverbs-dev libjpeg8-dev libncurses5-dev libnuma-dev
