--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,8 +34,8 @@ jobs:
         run: |
           wget -c "https://github.com/ninja-build/ninja/releases/download/v1.12.0/ninja-linux.zip" && unzip ninja-linux.zip && sudo mv ninja /usr/bin/
           wget -c "https://github.com/mesonbuild/meson/releases/download/1.4.0/meson-1.4.0.tar.gz" && tar -xf meson-1.4.0.tar.gz && cd meson-1.4.0/ && sudo ln -rs meson.py /usr/bin/meson
-          sudo apt install libxml2-utils xsltproc libglib2.0-dev gnutls-bin libgnutls*-dev libxml2-dev pip docutils-common gettext
-          sudo apt install python3-venv git pkg-config libglib2.0-dev flex bison git libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev libspice-protocol-dev
+          sudo apt-get install libxml2-utils xsltproc libglib2.0-dev gnutls-bin libgnutls28-dev libxml2-dev pip docutils-common gettext
+          sudo apt-get install python3-venv git pkg-config libglib2.0-dev flex bison git libglib2.0-dev libfdt-dev libpixman-1-dev zlib1g-dev libspice-protocol-dev
           sudo apt-get install libaio-dev libbluetooth-dev libcapstone-dev libbrlapi-dev libbz2-dev libusb* libspice-server1 libspice-server-dev
           sudo apt-get install libcap-ng-dev libcurl4-gnutls-dev libgtk-3-dev libnfs* slirp* libslirp0 libslirp-dev
           sudo apt-get install libibverbs-dev libjpeg8-dev libncurses5-dev libnuma-dev libvirglrenderer-dev libvirglrenderer1 virgl-server libiscsi7 libiscsi-dev libzstd1 libzstd-dev
