--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -58,7 +58,7 @@ jobs:
           make
           make install
           cd
-          cp qemu.desktop qemu_logo_no_text.svg AppRun libunionpreload.so lucas/
+          cp qemu.desktop qemu_logo_no_text.svg AppRun libunionpreload.so  /home/runner/work/Qemu_Appimage/Qemu_Appimage/lucas/
           git clone https://gitlab.com/libvirt/libvirt.git
           cd libvirt/
           mkdir build
