--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -75,9 +75,9 @@ jobs:
       - name: Build appimage
         run: |
           
-          ./linuxdeploy --appdir lucas/
-          find -iname 'qemu.desktop' | xargs -i -t -exec cp {} /home/runner/work/Qemu_Appimage/Qemu_Appimage/lucas/
-          ARCH=x86_64 ./appimagetool -n lucas/
+          find -name 'linuxdeploy**' -type f -exec {} --appdir ${GITHUB_WORKSPACE}/lucas/ \;
+          find -iname 'qemu.desktop' | xargs -i -t -exec cp {} ${GITHUB_WORKSPACE}/lucas/
+          ARCH=x86_64 find -name 'appimagetool**' -type f -exec {} ${GITHUB_WORKSPACE}/lucas/ \;
 
       - name: release
         uses: "marvinpinto/action-automatic-releases@6273874b61ebc8c71f1a61b2d98e234cf389b303"
