--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,6 +45,12 @@ jobs:
           sudo apt-get install valgrind xfslibs-dev libpixman-1-0 libpixman-1-dev
           wget -q "https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage" -O linuxdeploy ; chmod a+x linuxdeploy
           wget -q "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage" -O appimagetool ; chmod a+x appimagetool
+          wget -c -q "https://download.gnome.org/sources/glib/2.80/glib-2.80.2.tar.xz"
+          tar -xf glib-*.tar.xz
+          cd cd glib-*
+          meson setup _build
+          meson compile -C _build
+          sudo meson install -C _build
           mkdir -p lucas/usr/lib/
           mkdir -p lucas/usr/share/
           cp -r /usr/share/mime/ lucas/usr/share/
