--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,8 +46,8 @@ jobs:
           wget -q "https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage" -O linuxdeploy ; chmod a+x linuxdeploy
           wget -q "https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage" -O appimagetool ; chmod a+x appimagetool
           wget -c -q "https://download.gnome.org/sources/glib/2.80/glib-2.80.2.tar.xz"
-          tar -xf glib-*.tar.xz
-          cd glib-*
+          tar -xf glib-2.80.2.tar.xz
+          cd glib-2.80.2
           meson setup _build
           meson compile -C _build
           sudo meson install -C _build
