--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -153,7 +153,11 @@ jobs:
           
           find -name 'linuxdeploy**' -type f -exec {} --appdir ${GITHUB_WORKSPACE}/lucas/ \;
           cd ${GITHUB_WORKSPACE} && cp qemu.desktop lucas/ && find lucas/ -depth -iname 'libglib-2.0.so.0' -type f -delete
-          ARCH=x86_64 find -name 'appimagetool**' -type f -exec {} ${GITHUB_WORKSPACE}/lucas/ \;
+          cd ${GITHUB_WORKSPACE}/lucas/
+          VERSION=$(./AppRun --version | awk '{print $2}')
+          cd ..
+          echo $VERSION
+          ARCH=x86_64 VERSION=$VERSION find -name 'appimagetool**' -type f -exec {} ${GITHUB_WORKSPACE}/lucas/ \;
 
       - name: release
         uses: "marvinpinto/action-automatic-releases@6273874b61ebc8c71f1a61b2d98e234cf389b303"
