--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -154,6 +154,8 @@ jobs:
           
           find -name 'linuxdeploy**' -type f -exec {} --appdir ${GITHUB_WORKSPACE}/lucas/ \;
           cd ${GITHUB_WORKSPACE} && cp qemu.desktop lucas/ && find lucas/ -depth -iname 'libglib-2.0.so.0' -type f -delete
+          find ${GITHUB_WORKSPACE}/lucas/usr/bin/ -type f | xargs strip
+          find ${GITHUB_WORKSPACE}/lucas/usr/libexec/ -type f | xargs strip
           ARCH=x86_64 VERSION=git find -name 'appimagetool**' -type f -exec {} ${GITHUB_WORKSPACE}/lucas/ \;
 
       - name: release
